test/errors/unexpected_indentation_2.dmd
print(10)
  print(20)
print(false)


    print("Yeah")

--- Output
Unexpected indent

2|   print(20)
     ^
Unexpected indent

6|     print("Yeah")
       ^
---
